--- a/PPW_HTML_Test/index.html
+++ b/PPW_HTML_Test/index.html
@@ -5,7 +5,7 @@
     <title>Lucrare de control. Varianta I</title>
 </head>
 <body>
-
+<p1>Test de evaluare <b>HTML Nr.1.</b> <i>Varianta I.</i> <u>26.10.2020</u></p1>
 
 </body>
 </html>
