--- a/PPW_HTML_Test/index.html
+++ b/PPW_HTML_Test/index.html
@@ -7,5 +7,14 @@
 <body>
 <p1>Test de evaluare <b>HTML Nr.1.</b> <i>Varianta I.</i> <u>26.10.2020</u></p1>
 
+<ol type="A" start="16">
+  <li>Unu</li>
+  <li>Doi</li>
+  <li>Trei</li>
+  <li>Patru</li>
+  <li>Cinci</li>
+</ol>
+
+
 </body>
 </html>
