--- a/PPW_HTML_Test/index.html
+++ b/PPW_HTML_Test/index.html
@@ -15,6 +15,10 @@
   <li>Cinci</li>
 </ol>
 
+<a href="http://usarb.md" target=”_blank">USARB</a>
+
+<a href="http://orar.usarb.md"><img src="logo.jpg"></a>
+
 
 </body>
 </html>
