--- a/PPW_HTML_Test/index.html
+++ b/PPW_HTML_Test/index.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Lucrare de control. Varianta I</title>
+
+    <style>
+        table,th,td{
+            border:1px solid black;
+            text-align: right;
+        }
+        table {
+
+            margin: 0 auto;
+            width: 300px;
+        }
+    </style>
 </head>
 <body>
 <p1>Test de evaluare <b>HTML Nr.1.</b> <i>Varianta I.</i> <u>26.10.2020</u></p1>
@@ -20,5 +32,19 @@
 <a href="http://orar.usarb.md"><img src="logo.jpg"></a>
 
 
+<table>
+    <tr>
+        <th>Coloana 1</th>
+        <th>Coloana 2</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>1</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>1</td>
+    </tr>
+</table>
 </body>
 </html>
