--- a/PPW_HTML_Test/index.html
+++ b/PPW_HTML_Test/index.html
@@ -46,5 +46,9 @@
         <td>1</td>
     </tr>
 </table>
+
+<img src="logo.jpg" alt="Eroare" title="Aceasta este o imagine" width="15%">
+
+
 </body>
 </html>
