--- a/PPW_HTML_Test/index.html
+++ b/PPW_HTML_Test/index.html
@@ -49,6 +49,31 @@
 
 <img src="logo.jpg" alt="Eroare" title="Aceasta este o imagine" width="15%">
 
+<form>
+    <label for="Nume">Nume:</label>
+    <input type="text" id="Nume" name="nume" required><br>
 
+    <label for="grupa">Grupa</label>
+    <select id="grupa" name="grupa" required>
+        <option value="IS21Z">IS21Z</option>
+    </select><br>
+
+    <label for="Puncte">Puncte:</label>
+    <input type="number" id="Puncte" name="Puncte" required><br>
+
+    <laber for="Varianta">Varianta</laber>
+    <input type="radio" id="I" name="Varianta" value="I" required>
+    <label for="I">I</label>
+    <input type="radio" id="II" name="Varianta" value="II" required>
+    <label for="II">II</label>
+    <input type="radio" id="III" name="Varianta" value="III" required>
+    <label for="III">III</label>
+    <input type="radio" id="IV" name="Varianta" value="IV" required>
+    <label for="IV">IV</label><br>
+
+    <input type="reset" value="Reset">
+    <input type="submit" value="Submit">
+
+</form>
 </body>
 </html>
