--- a/PPWSITE/index.html
+++ b/PPWSITE/index.html
@@ -35,7 +35,9 @@
 <div class="fondal1">
 
     <h1>We will boost the rating before your eyes!</h1>
-    <img class="imghero"src="img/hero.png">
+    <figure >
+        <img src="img/BoringSplendidCarp.gif" class="imghero">
+    </figure>
     <ul>
         <li>Real time monitoring</li>
         <li>Complete security and anonymity</li>
