--- a/PPWSITE/about.html
+++ b/PPWSITE/about.html
@@ -51,7 +51,7 @@
       <h3>Noone</h3>
       <p>10200 MMR</p>
       <p>376 completed orders</p>
-      <img class="card-img"src="img/noone.webp">
+      <img class="card-img"src="img/noone.jpg">
     </div>
   </div>
 
@@ -87,7 +87,7 @@
       <h3>Noone</h3>
       <p>10200 MMR</p>
       <p>376 completed orders</p>
-      <img class="card-img"src="img/noone.webp">
+      <img class="card-img"src="img/noone.jpg">
     </div>
   </div>
 
